<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SearchSettingsActivity" >

    <TextView
        android:id="@+id/tvAdvancedSearchSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/advanced_search_settings"
        android:textStyle="bold"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvImageSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvAdvancedSearchSettings"
        android:layout_below="@+id/tvAdvancedSearchSettings"
        android:layout_marginTop="20dp"
        android:text="@string/image_size_label" />

    <Spinner
        android:id="@+id/sprImageSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvImageSize"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/tvImageSize" />

    <TextView
        android:id="@+id/tvColorFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvImageSize"
        android:layout_below="@+id/sprImageSize"
        android:layout_marginTop="20dp"
        android:text="@string/color_filter_label" />

    <Spinner
        android:id="@+id/sprColorFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignLeft="@+id/sprImageSize"
        android:layout_alignTop="@+id/tvColorFilter" />

    <TextView
        android:id="@+id/tvImageType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvColorFilter"
        android:layout_below="@+id/sprColorFilter"
        android:layout_marginTop="20dp"
        android:text="@string/image_type_label" />

    <Spinner
        android:id="@+id/sprImageType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignLeft="@+id/sprColorFilter"
        android:layout_alignTop="@+id/tvImageType" />

    <TextView
        android:id="@+id/tvSiteFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvImageType"
        android:layout_below="@+id/sprImageType"
        android:layout_marginTop="20dp"
        android:text="@string/site_filter_label" />

    <EditText
        android:id="@+id/etSiteFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sprImageType"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tvSiteFilter"
        android:ems="10"
        android:hint="@string/site_filter_hint" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnSave"
        android:layout_toRightOf="@+id/btnSave"
        android:onClick="onClearSettings"
        android:text="@string/clear_label" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etSiteFilter"
        android:layout_below="@+id/etSiteFilter"
        android:layout_marginTop="20dp"
        android:onClick="onSaveSettings"
        android:text="@string/save_label" />

</RelativeLayout>
