<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlSearch"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SearchActivity" >

    <EditText
        android:id="@+id/etQuery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/query_hint" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:onClick="onImageSearch"
        android:text="@string/search_label"
        android:tag="search" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btnSearch"
        android:orientation="vertical" >

        <GridView
            android:id="@+id/gvResults"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:columnWidth="80dp"
            android:gravity="center"
            android:horizontalSpacing="2dp"
            android:verticalSpacing="2dp"
            android:numColumns="auto_fit"
            android:stretchMode="columnWidth" >
        </GridView>

        <Button
            android:id="@+id/btnLoadMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onImageSearch"
            android:text="@string/load_more_label"
            android:layout_gravity="center"
            android:visibility="gone"
            android:tag="more" />
        
    </LinearLayout>

</RelativeLayout>